# resume

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  nodemon.json  pyproject.toml  resume.example.yaml
src/resume/: app.py  models.py
src/resume/resources/: __init__.py
src/resume/templates/: resume.typ.jinja
src/resume/utils/: logging.py
